--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
           <meta http-equiv="content-type" content="text/html; charset= UTF-8"/>
           <meta name="description" content=" Asamblea de Iglesias Cristianas Inc. - REPUBLICA DOMINICANA -">
 
-<link rel = "stylesheet" type= "text/css" href="style/style.css">
+<link rel = "stylesheet" type= "text/css" href="asamblypage/style.css">
 
 
 </head>
@@ -75,7 +75,7 @@
         
 
 
-<footer>© Copyright 2016, Addonay Software. </footer>
+<footer>© Copyright 2016, nparedes Software. </footer>
 </body>
 </html>
 
