--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         
 
 
-<footer>© Copyright 2016, nparedes Software. </footer>
+<footer>© Copyright 2016, saludo Software. </footer>
 </body>
 </html>
 
